syntax = "proto3";

package cometbft.consensus;

option go_package = "github.com/byzantine-simulate/cometbft/consensus";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// CometBFT Consensus Message Types
enum CometBFTMessageType {
  COMETBFT_MESSAGE_TYPE_UNSPECIFIED = 0;
  NEW_ROUND_STEP = 1;
  NEW_VALID_BLOCK = 2;
  PROPOSAL = 3;
  PROPOSAL_POL = 4;
  BLOCK_PART = 5;
  VOTE = 6;
  HAS_VOTE = 7;
  VOTE_SET_MAJ23 = 8;
  VOTE_SET_BITS = 9;
}

// Signed Message Types
enum SignedMsgType {
  SIGNED_MSG_TYPE_UNKNOWN = 0;
  SIGNED_MSG_TYPE_PREVOTE = 1;
  SIGNED_MSG_TYPE_PRECOMMIT = 2;
  SIGNED_MSG_TYPE_PROPOSAL = 32;
}

// Block ID Flag
enum BlockIDFlag {
  BLOCK_ID_FLAG_UNKNOWN = 0;
  BLOCK_ID_FLAG_ABSENT = 1;
  BLOCK_ID_FLAG_COMMIT = 2;
  BLOCK_ID_FLAG_NIL = 3;
}

// Part Set Header
message PartSetHeader {
  uint32 total = 1;
  bytes hash = 2;
}

// Block ID
message BlockID {
  bytes hash = 1;
  PartSetHeader part_set_header = 2;
}

// NewRoundStep message
message NewRoundStep {
  int64 height = 1;
  int32 round = 2;
  uint32 step = 3;
  int64 seconds_since_start_time = 4;
  int32 last_commit_round = 5;
}

// NewValidBlock message
message NewValidBlock {
  int64 height = 1;
  int32 round = 2;
  PartSetHeader block_part_set_header = 3;
  repeated string block_parts = 4;
  bool is_commit = 5;
}

// Proposal message
message Proposal {
  SignedMsgType type = 1;
  int64 height = 2;
  int32 round = 3;
  int32 pol_round = 4;
  BlockID block_id = 5;
  google.protobuf.Timestamp timestamp = 6;
  bytes signature = 7;
}

// ProposalPOL message
message ProposalPOL {
  int64 height = 1;
  int32 proposal_pol_round = 2;
  repeated string proposal_pol = 3;
}

// BlockPart message
message BlockPart {
  int64 height = 1;
  int32 round = 2;
  uint32 part_index = 3;
  bytes part_bytes = 4;
  bytes part_proof = 5;
}

// Vote message
message Vote {
  SignedMsgType type = 1;
  int64 height = 2;
  int32 round = 3;
  BlockID block_id = 4;
  google.protobuf.Timestamp timestamp = 5;
  bytes validator_address = 6;
  int32 validator_index = 7;
  bytes signature = 8;
  bytes extension = 9;
  bytes extension_signature = 10;
}

// HasVote message
message HasVote {
  int64 height = 1;
  int32 round = 2;
  SignedMsgType type = 3;
  int32 index = 4;
}

// VoteSetMaj23 message
message VoteSetMaj23 {
  int64 height = 1;
  int32 round = 2;
  SignedMsgType type = 3;
  BlockID block_id = 4;
}

// VoteSetBits message
message VoteSetBits {
  int64 height = 1;
  int32 round = 2;
  SignedMsgType type = 3;
  BlockID block_id = 4;
  repeated string votes = 5;
}

// Main CometBFT Consensus Message
message CometBFTConsensusMessage {
  CometBFTMessageType message_type = 1;
  int64 height = 2;
  int32 round = 3;
  google.protobuf.Timestamp timestamp = 4;
  
  oneof sum {
    NewRoundStep new_round_step = 5;
    NewValidBlock new_valid_block = 6;
    Proposal proposal = 7;
    ProposalPOL proposal_pol = 8;
    BlockPart block_part = 9;
    Vote vote = 10;
    HasVote has_vote = 11;
    VoteSetMaj23 vote_set_maj23 = 12;
    VoteSetBits vote_set_bits = 13;
  }
  
  // Additional metadata
  string version = 14;
  map<string, google.protobuf.Any> extensions = 15;
}

// Commit message
message Commit {
  int64 height = 1;
  int32 round = 2;
  BlockID block_id = 3;
  repeated CommitSig signatures = 4;
}

// CommitSig message
message CommitSig {
  BlockIDFlag block_id_flag = 1;
  bytes validator_address = 2;
  google.protobuf.Timestamp timestamp = 3;
  bytes signature = 4;
}

// ExtendedCommit message
message ExtendedCommit {
  int64 height = 1;
  int32 round = 2;
  BlockID block_id = 3;
  repeated ExtendedCommitSig extended_signatures = 4;
}

// ExtendedCommitSig message
message ExtendedCommitSig {
  BlockIDFlag block_id_flag = 1;
  bytes validator_address = 2;
  google.protobuf.Timestamp timestamp = 3;
  bytes signature = 4;
  bytes extension = 5;
  bytes extension_signature = 6;
}


